# rent-vs-buy-simulator

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.local  FORMULAS.md  QUICKSTART.md  README.md  app.py  docker-compose.yml  pyproject.toml  run.py
.cursor/rules/general/: karpathy_vibes.mdc
.cursor/rules/python/: comments.mdc  docstrings.mdc  types.mdc
.cursor/skills/code-cleaner/: SKILLS.md
.cursor/skills/code-onboarder/: SKILLS.md
.cursor/skills/docstring-numpy/: SKILLS.md
.cursor/skills/pr-description/: SKILLS.md
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml
docs/: frontend-migration-design.md  frontend-migration-plan.md  multi-region-spec.md  redesign-spec.md
docs/adr/: 0001-liquidation-based-net-value.md  0002-two-strategies-cash-flow-matching.md  0003-monte-carlo-auto-run-fixed-calibration.md  0004-horizon-decoupled-from-mortgage-term.md  0005-results-page-verdict-narrative.md  0006-stay-on-streamlit-for-redesign.md  0007-multi-region-via-tax-primitives.md  0008-fastapi-static-frontend.md  0009-portfolio-tax-wrappers-out-of-scope.md
docs/superpowers/plans/: 2026-03-28-explainer-popups.md  2026-03-28-monte-carlo.md
docs/superpowers/specs/: 2026-03-28-explainer-popups-design.md
src/simulator/: __init__.py  api.py  app.py  cli.py  engine.py  explainers.py  mc_visualization.py  models.py  monte_carlo.py  regions.py  scenario_manager.py  server.py  utils.py  visualization.py
src/simulator/static/: index.html
src/simulator/static/css/: style.css
src/simulator/static/js/: api.js  charts.js  fields.js  format.js  inputs.js  main.js  results.js  state.js  ui.js
tests/: test_api.py  test_calculate_scenarios.py  test_chart_axes.py  test_closing_costs.py  test_engine.py  test_engine_core.py  test_engine_primitives.py  test_engine_taxes.py  test_explainers.py  test_mc_visualization.py  test_models.py  test_monte_carlo.py  test_regions.py  test_tornado_bounds.py  test_us_regression.py
