[project]
name = "simulator"
version = "0.1.0"
description = "Real Estate vs. Equity Simulation Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "numpy-financial>=1.0.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "streamlit>=1.29.0",
    "pytest>=7.4.0",
    "fpdf2>=2.7.0",
    "kaleido>=0.2.0",
]

# Ruff global configuration for linting & formatting
# --------------------------------------------------------
[tool.ruff]
# Target Python version
target-version = "py312"

# Line length (black formatter convention)
line-length = 88

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) and Ruff-specific rules (`RUF`)
# Plus isort (`I`), pycodestyle (`E`), and more common rulesets
select = ["E", "F", "B", "I", "C90", "N", "UP", "RUF"]

# Ignore specific rules
ignore = [
    # Add any rules you want to ignore
    "E203",   # Whitespace before ':' (conflicts with Black)
    "RUF001", # Allow emoji characters in strings (intentional for UI)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Quote style
quote-style = "double"
# Indent style
indent-style = "space"
