[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rent-vs-buy-simulator"
version = "1.0.0"
description = "Real Estate vs. Equity Simulation Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "numpy-financial>=1.0.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "streamlit>=1.37.0",
    "fpdf2>=2.7.0",
    "kaleido>=0.2.0",
    "matplotlib>=3.8.0",
    "aleatory>=0.4.0",
]

[project.urls]
Homepage = "https://rent-or-buy-sim.com"
Repository = "https://github.com/palsagar/rent-vs-buy-simulator"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "ty>=0.0.1a0",
]

[project.scripts]
rent-vs-buy = "simulator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simulator"]

# Ruff global configuration for linting & formatting
# --------------------------------------------------------
[tool.ruff]
# Target Python version
target-version = "py312"

# Line length (black formatter convention)
line-length = 88

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) and Ruff-specific rules (`RUF`)
# Plus isort (`I`), pycodestyle (`E`), and more common rulesets
select = ["E", "F", "B", "I", "C90", "N", "UP", "RUF"]

# Ignore specific rules
ignore = [
    # Add any rules you want to ignore
    "E203",   # Whitespace before ':' (conflicts with Black)
    "RUF001", # Allow emoji characters in strings (intentional for UI)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Quote style
quote-style = "double"
# Indent style
indent-style = "space"

# Coverage configuration
# --------------------------------------------------------
[tool.coverage.run]
source = ["src/simulator"]
branch = true
omit = [
    "*/app.py",
    "*/cli.py",
    "*/explainers.py",
    "*/scenario_manager.py",
    "*/utils.py",
    "*/visualization.py",
    "*/mc_visualization.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "coverage_html"

[tool.coverage.xml]
output = "coverage.xml"
